@@ -2206,7 +2206,7 @@ TAO_CodeGen::gen_ifndef_string (const char *fname,
       extension = fname;
     }
 
-  ACE_OS::sprintf (macro_name, prefix);
+  ACE_OS::sprintf (macro_name, "%s", prefix);
 
   size_t offset = ACE_OS::strlen (prefix);
 
