@@ -204,7 +204,7 @@ be_sequence::gen_name (void)
     {
       char ulval_str [NAMEBUFSIZE];
       ACE_OS::sprintf (ulval_str,
-                       "_%lu",
+                       "_%u",
                        this->max_size ()->ev ()->u.ulval);
       ACE_OS::strcat (namebuf,
                       ulval_str);
@@ -465,7 +465,7 @@ be_sequence::instance_name ()
       else
         {
           ACE_OS::sprintf (namebuf,
-                           "_TAO_bounded_object_reference_sequence_%s_%lu",
+                           "_TAO_bounded_object_reference_sequence_%s_%u",
                            prim_type->local_name ()->get_string (),
                            this->max_size ()->ev ()->u.ulval);
         }
@@ -481,7 +481,7 @@ be_sequence::instance_name ()
       else
         {
           ACE_OS::sprintf (namebuf,
-                           "_TAO_bounded_valuetype_sequence_%s_%lu",
+                           "_TAO_bounded_valuetype_sequence_%s_%u",
                            prim_type->local_name ()->get_string (),
                            this->max_size ()->ev ()->u.ulval);
         }
@@ -539,7 +539,7 @@ be_sequence::instance_name ()
       else
         {
           ACE_OS::sprintf (namebuf,
-                           "_TAO_bounded_value_sequence_%s_%lu",
+                           "_TAO_bounded_value_sequence_%s_%u",
                             prim_type->local_name ()->get_string (),
                             this->max_size ()->ev ()->u.ulval);
         }
@@ -826,7 +826,7 @@ be_sequence::compute_tc_name (void)
   char bound[30] = { 0 };
 
   ACE_OS::sprintf (bound,
-                   "_%lu",
+                   "_%u",
                    this->max_size ()->ev ()->u.ulval);
 
   ACE_CString local_tc_name =
